--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="historia.html">Sobre</a></li>
+                <li><a href="./prjFinal/historia.html">Sobre</a></li>
                 <li><a href="#">Integrantes</a>
                     <ul>
                         <li><a href="https://liciantunes.github.io/">Alicie Antunes</a></li>
@@ -30,8 +30,8 @@
                         <li><a href="https://paolacriss.github.io/">Paola Cristine</a></li>
                     </ul>
                 </li>
-                <li><a href="cadastro.html">Cadastro</a></li>
-                <li><a href="download.html">Download</a></li>
+                <li><a href="./prjFinal/cadastro.html">Cadastro</a></li>
+                <li><a href="./prjFinal/download.html">Download</a></li>
             </ul>
         </nav>
     </center>
