--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="menusenai">
-        <img src="./img/logosenai.jpg">
+        <img src="./prjFinal/./img/logosenai.jpg">
     </div>
     <center>
         <nav>
