--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <center>
         <nav>
             <ul class="menu">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./prjFinal/index.html">Home</a></li>
                 <li><a href="./prjFinal/historia.html">Sobre</a></li>
                 <li><a href="#">Integrantes</a>
                     <ul>
